After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 735099 - gst-validate: fix some minor memory leaks
gst-validate: fix some minor memory leaks
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-devtools
1.x
Other Linux
: Normal minor
: 1.3.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-08-20 14:10 UTC by Anuj
Modified: 2014-09-26 08:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Few pointers not handled properly (1.03 KB, patch)
2014-08-21 09:30 UTC, Anuj
committed Details | Review

Description Anuj 2014-08-20 14:10:36 UTC
In gst-validate.c :
tmp = g_strdup_printf ("get-%s-pad", type); 
allocates memory to tmp so this should be unref after use, and the other one is *err. 
I guess one more place for *output_file requires to freed??
Comment 1 Tim-Philipp Müller 2014-08-21 09:27:43 UTC
Care to make a patch? :)
Comment 2 Anuj 2014-08-21 09:30:40 UTC
Created attachment 284067 [details] [review]
Few pointers not handled properly
Comment 3 Tim-Philipp Müller 2014-08-23 11:01:30 UTC
Thanks for the patch, pushed with minor changes:

 commit eb16061fa9c36d2c5a2dd734c92f1a51bcaa70a1
 Author: Anuj Jaiswal <anuj.jaiswal@samsung.com>
 Date:   Wed Aug 20 18:59:26 2014 +0530

    gst-validate: fix some minor memory leaks
    
    https://bugzilla.gnome.org/show_bug.cgi?id=735099

I don't think that in practice error can actually be non-NULL at the exit at the end, if there's an error we'll bail out earlier, so I've just cleared errors there as well.