gst-validate: fix some minor memory leaks

https://bugzilla.gnome.org/show_bug.cgi?id=735099